# txtIntelligentReader

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE_SUMMARY.md  medical_final.txt  medical_output.md  medical_output_lenient.txt  medical_sample.txt  medical_test.txt  medical_test_sample.txt  processing_stats.json  pyproject.toml  requirements.txt  setup.py  validate_release.py
config/: config.json  optimized_config.json
docs/: CONTRIBUTING.md  FAQ.md  INSTALLATION.md  TROUBLESHOOTING.md  api-reference.md  developer-guide.md  initial-prompt-template.md  user-guide.md
examples/: basic_usage.py
plans/: txtintelligentreader-implementation-plan.md
scripts/: main.py
src/: __init__.py  main.py
src/agents/: __init__.py  content_classifier.py  grammar_enhancer.py  health_expert.py  quality_validator.py  workflow_coordinator.py
src/config/: __init__.py  settings.py
src/filters/: __init__.py  ai_analysis.py  health_context.py  quick_filter.py  thought_validator.py
src/pipeline/: __init__.py  filter_pipeline.py  text_processor.py
src/utils/: __init__.py  config_loader.py  error_handler.py  file_handler.py  llm_client.py  logger.py  output_formatter.py
tests/: __init__.py  test_ai_analysis.py  test_classifier.py  test_content_classifier.py  test_error_handling.py  test_filters_unit.py  test_grammar_enhancer.py  test_health_context.py  test_health_expert.py  test_integration_comprehensive.py  test_output_formatting.py  test_performance.py  test_pipeline_integration.py  test_pipeline_unit.py  test_quality_validation.py  test_quality_validator.py  test_quick_filter.py  test_thought_validator.py  test_utils_unit.py  test_workflow_coordinator.py
